# haloitsm-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mcp-clients.md
src/halo_mcp/: __init__.py  auth.py  client.py  config.py  models.py  observability.py  server.py  smoke.py
src/halo_mcp/tools/: __init__.py  read.py  write.py
tests/: conftest.py  test_auth.py  test_client.py  test_client_timeout.py  test_config.py  test_models.py  test_observability.py  test_smoke.py  test_tools_analytics.py  test_tools_appointments.py  test_tools_billing.py  test_tools_lookups.py  test_tools_projects.py  test_tools_read.py  test_tools_reports.py  test_tools_sites.py  test_tools_write.py  test_tools_write_assets.py  test_tools_write_directory.py  test_tools_write_sites.py
